package diary

type Diary struct {
	Id         Id
	TalentName TalentName
	GroupName  GroupName
}
